--- a/JIG/marionette/index.html
+++ b/JIG/marionette/index.html
@@ -139,8 +139,8 @@
       <div class="abstract col-md-9">
         <p>Slides from a presentation I gave at an internal Novartis Javascript Interest Group meeting.
           <br/><b>Covers Marionette.js</b>.</p>
-        <p>Goals: Intro level, with examples and live demos of interanlly built apps that use Marionette. Stir some interest and keep it entertaining.</p>
-        <p>Notes: This was interactive presentation used arrows.js for the interactive graph outline, and good old fashioned html/css/js.  These are snaps and post-hoc notes to add-back a little context.  Some parts may be blurred to mask IP-related information.</p>
+        <p>Goals: Intro level, with examples and live demos of internally built apps that use Marionette. Stir some interest and keep it entertaining.</p>
+        <p>Notes: This presentation used arrows.js for the interactive graph outline, along with good old fashioned html/css/js.  These are snaps and post-hoc notes to add-back a little context.  Some parts may be blurred to mask IP-related information.</p>
       </div>
     </div>
     <hr/>
